@@ -5,49 +5,57 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class Main {
-    List<List<Integer>> res = new ArrayList<>();
+    List<List<String>> res = new ArrayList<List<String>>();
+    public List<List<String>> partition(String s) {
 
-    List<List<Integer>> permute(int[] nums){
-        List<Integer> options = new ArrayList<>();
-
-        if(nums == null || nums.length == 0) return res;
-        for (int num : nums) {
-            options.add(num);
-        }
-
-        place(new LinkedList<Integer>(),options);
 
         return res;
-
     }
 
-    private void place(LinkedList<Integer> path, List<Integer> options){
-        if(path.size() == options.size()){
-            res.add(new LinkedList(path));  //这里必须是new一个list，因为path是地址，内容在变化
+
+    private void dfs(String s, int start,StringBuilder sb ,List<String> paths){
+        if(start == s.length()){
+            res.add(new ArrayList<>(paths));
             return;
         }
 
-        for (int i = 0; i < options.size(); i++) {
 
-            if(path.contains(options.get(i))){
-                continue;
-            }
-            path.add(options.get(i));
+        char c = s.charAt(start);
+        sb.append(c);
 
-            place(path,options); // 1 3 4 ; 1 3 4;
-            path.removeLast(); // 1 3 ; 1 3 4;
+        //做出当前选择
+        if(isSym(sb.toString())){
+            //放入
+            paths.add(sb.toString());
+            dfs(s,start+1,new StringBuilder(),paths);
+
+            //不放入
+            paths.remove(paths.size() - 1);
+            dfs(s,start+1,sb,paths);
+
+        }else{
+            dfs(s,start+1,sb,paths);
         }
     }
 
-    public static void main(String[] args) {
-        Main main = new Main();
-        main.permute(new int[]{1,3,4});
 
-        for (List<Integer> re : main.res) {
-            for (Integer integer : re) {
-                System.out.print(integer + " ");
-            }
-            System.out.println();
+
+
+    private boolean isSym(String sb){
+        int len = sb.length();
+
+        for (int i = 0; i < len / 2; i++) {
+            if(sb.charAt(i) != sb.charAt(len - 1 - i)) return false;
         }
+        return true;
+    }
+
+    public static void main(String[] args) {
+        Main v = new Main();
+//        boolean a = v.isSym("abb");
+//        System.out.println(a);
+        String s = "aab";
+        List<List<String>> partition = v.partition(s);
+        System.out.println(partition);
     }
 }
